# desktop-cleaner

./: LICENSE  README.md  desktop-cleaner.cabal
src/: Main.hs
