name:                desktop-cleaner
version:             0.1.0.0
-- description:      Clean up desktop files
homepage:            https://github.com/rstefanic/desktop-cleaner
license:             BSD3
license-file:        LICENSE
author:              Robert Stefanic
maintainer:          rstefanic72@gmail.com
copyright:           2017 Robert Stefanic
category:            Tool
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable desktop-cleaner
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , filepath
                     , time
                     , directory
